# scriptum

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README  README.md  run.sh
examples/: basic.scr
src/: cli.rs  error.rs  html.rs  main.cpp  main.rs  parser.rs  result.h  utils.rs
src/styles/: main.css
test/: basic.anl
